--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <h2>Contact Me</h2>
       <p>
         <a href="https://github.com/SDilhara737" target="_blank">GitHub</a> •
-        <a href="#">LinkedIn</a> •
-        <a href="mailto:youremail@example.com">Email</a>
+        <a href="https://www.linkedin.com/in/sachira-dilhara-26a916129?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a> •
+        <a href="sac365k@gmail.com">Email</a>
       </p>
     </section>
 
@@ -57,4 +57,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
