--- a/index.html
+++ b/index.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sachira Dilhara | Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header id="hero">
-      <h1>Hi, I’m Sachira Dilhara</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sachira Dilhara | Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+<body>
+  <header>
+    <h1>Sachira Dilhara</h1>
+    <p>Web Developer | Software Projects | MS Office Tools</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <div class="about-container">
+      <img src="your-photo.jpg" alt="Your Photo" class="profile-pic">
       <p>
-        Software Engineering Undergraduate • React, Node.js, Flutter Enthusiast
+        Hello! I'm <strong>Sachira Dilhara</strong>, passionate about building websites, working on software projects, 
+        and skilled with office tools like MS Office. I love creating solutions that make life easier and learning new 
+        technologies to expand my skills.
       </p>
-    </header>
+    </div>
+  </section>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        I’m a BSc Software Engineering student from Sri Lanka. I build small
-        practical apps using React, Node.js/Express, MySQL, and Flutter. I’m
-        exploring ML/AI and love lightweight automations, cricket, and
-        mystery/horror stories.
-      </p>
-    </section>
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
+      <div class="project-card">
+        <h3>Web Development</h3>
+        <p>Some of my responsive websites and frontend projects.</p>
+        <a href="https://github.com/SDilhara737" target="_blank" class="btn">View on GitHub</a>
+      </div>
+      <div class="project-card">
+        <h3>Software Projects</h3>
+        <p>Python and small software utilities I’ve built.</p>
+        <a href="https://github.com/SDilhara737" target="_blank" class="btn">View on GitHub</a>
+      </div>
+      <div class="project-card">
+        <h3>Office Tools</h3>
+        <p>Work with MS Office for reports, data, and presentations.</p>
+        <a href="mailto:sac365k@gmail.com" class="btn">Request Samples</a>
+      </div>
+    </div>
+  </section>
 
-    <section id="tech">
-      <h2>Tech & Tools</h2>
-      <ul>
-        <li>React</li>
-        <li>Node.js / Express</li>
-        <li>Flutter</li>
-        <li>MySQL</li>
-        <li>ML/AI & Automations</li>
-        <li>Office Tools (MS Office)</li>
-      </ul>
-    </section>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-icons">
+      <a href="mailto:sac365k@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="https://github.com/SDilhara737" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/sachira-dilhara-26a916129" target="_blank"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <div id="project-list"></div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>
-        <a href="https://github.com/SDilhara737" target="_blank">GitHub</a> •
-        <a href="https://www.linkedin.com/in/sachira-dilhara-26a916129?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a> •
-        <a href="sac365k@gmail.com">Email</a>
-      </p>
-    </section>
-
-    <footer>
-      <p>© 2025 Sachira Dilhara</p>
-    </footer>
-
-    <script src="script.js"></script>
-  </body>
+  <footer>
+    <p>© 2025 Sachira Dilhara | Built with ❤️</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
 </html>
-
-
