--- a/index.html
+++ b/index.html
@@ -4,57 +4,196 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sachira Dilhara | Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    /* General Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Poppins', sans-serif; line-height: 1.6; color: #333; }
+
+    /* Navbar */
+    nav {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 50px;
+      z-index: 1000;
+    }
+    nav h1 { font-size: 1.4rem; }
+    nav ul { display: flex; list-style: none; }
+    nav ul li { margin-left: 20px; }
+    nav ul li a {
+      text-decoration: none;
+      color: #fff;
+      transition: color 0.3s;
+    }
+    nav ul li a:hover { color: #ff9800; }
+
+    /* Hero Section */
+    header {
+      height: 100vh;
+      background: linear-gradient(to right, #0078ff, #00c6ff);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    header h1 { font-size: 3rem; margin-bottom: 15px; }
+    header p { font-size: 1.3rem; margin-bottom: 20px; }
+    header a {
+      background: #fff;
+      color: #0078ff;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      margin: 5px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    header a:hover { background: #ff9800; color: #fff; }
+
+    /* Section Style */
+    section { padding: 80px 20px; text-align: center; }
+    section h2 { font-size: 2rem; margin-bottom: 30px; }
+
+    /* About */
+    .about-container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 30px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .profile-pic {
+      width: 180px; height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    .about-text { max-width: 500px; text-align: left; }
+
+    /* Projects */
+    .projects-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .project-card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    }
+    .project-card h3 { margin-bottom: 10px; }
+    .btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 15px;
+      background: #0078ff;
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    .btn:hover { background: #ff9800; }
+
+    /* Contact */
+    .contact-icons {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      font-size: 2rem;
+    }
+    .contact-icons a { color: #333; transition: color 0.3s, transform 0.3s; }
+    .contact-icons a:hover { color: #0078ff; transform: scale(1.2); }
+
+    /* Footer */
+    footer {
+      background: #222;
+      color: #fff;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+    }
+
+    /* Smooth Scrolling */
+    html { scroll-behavior: smooth; }
+  </style>
 </head>
 <body>
-  <header>
+
+  <!-- Navbar -->
+  <nav>
     <h1>Sachira Dilhara</h1>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero -->
+  <header id="home">
+    <h1>Hello, I'm Sachira Dilhara</h1>
     <p>Web Developer | Software Projects | MS Office Tools</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <a href="#projects">View My Work</a>
+    <a href="#contact">Contact Me</a>
   </header>
 
-  <!-- About Section -->
+  <!-- About -->
   <section id="about">
     <h2>About Me</h2>
     <div class="about-container">
-      <img src="your-photo.jpg" alt="Your Photo" class="profile-pic">
-      <p>
-        Hello! I'm <strong>Sachira Dilhara</strong>, passionate about building websites, working on software projects, 
-        and skilled with office tools like MS Office. I love creating solutions that make life easier and learning new 
-        technologies to expand my skills.
-      </p>
+      <img src="my.jpg" alt="Your Photo" class="profile-pic">
+      <div class="about-text">
+        <p>
+          Hi! I'm <strong>Sachira Dilhara</strong>, a passionate developer who loves building modern 
+          websites, small software projects, and working with productivity tools like MS Office.  
+          I’m always curious to learn new technologies and improve my craft.
+        </p>
+      </div>
     </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Projects -->
   <section id="projects">
-    <h2>Projects</h2>
+    <h2>My Projects</h2>
     <div class="projects-container">
       <div class="project-card">
         <h3>Web Development</h3>
-        <p>Some of my responsive websites and frontend projects.</p>
-        <a href="https://github.com/SDilhara737" target="_blank" class="btn">View on GitHub</a>
+        <p>Responsive websites and UI projects.</p>
+        <a href="https://github.com/SDilhara737" target="_blank" class="btn">View GitHub</a>
       </div>
       <div class="project-card">
         <h3>Software Projects</h3>
-        <p>Python and small software utilities I’ve built.</p>
-        <a href="https://github.com/SDilhara737" target="_blank" class="btn">View on GitHub</a>
+        <p>Python & small tools for automation.</p>
+        <a href="https://github.com/SDilhara737" target="_blank" class="btn">View GitHub</a>
       </div>
       <div class="project-card">
         <h3>Office Tools</h3>
-        <p>Work with MS Office for reports, data, and presentations.</p>
+        <p>Working with Excel, Word, and reports.</p>
         <a href="mailto:sac365k@gmail.com" class="btn">Request Samples</a>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Contact -->
   <section id="contact">
     <h2>Contact Me</h2>
     <div class="contact-icons">
@@ -64,9 +203,9 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Sachira Dilhara | Built with ❤️</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
