--- a/index.html
+++ b/index.html
@@ -15,39 +15,28 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(10px);
+      background: rgba(0, 0, 0, 0.8);
       color: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 15px 50px;
       z-index: 1000;
-      transition: background 0.3s;
     }
-    nav.scrolled { background: #0d1b2a; }
-    nav h1 { font-size: 1.4rem; color: white; }
+    nav h1 { font-size: 1.4rem; }
     nav ul { display: flex; list-style: none; }
     nav ul li { margin-left: 20px; }
     nav ul li a {
       text-decoration: none;
       color: #fff;
       transition: color 0.3s;
-      font-weight: 500;
     }
     nav ul li a:hover { color: #ff9800; }
-    .nav-icons a {
-      margin-left: 15px;
-      color: #fff;
-      font-size: 1.2rem;
-      transition: color 0.3s;
-    }
-    .nav-icons a:hover { color: #ff9800; }
 
     /* Hero Section */
     header {
       height: 100vh;
-      background: url('your-blur-image.jpg') no-repeat center center/cover;
+      background: linear-gradient(to right, #0078ff, #00c6ff);
       color: white;
       display: flex;
       flex-direction: column;
@@ -58,8 +47,8 @@
     header h1 { font-size: 3rem; margin-bottom: 15px; }
     header p { font-size: 1.3rem; margin-bottom: 20px; }
     header a {
-      background: #0d1b2a;
-      color: #fff;
+      background: #fff;
+      color: #0078ff;
       padding: 10px 20px;
       border-radius: 6px;
       text-decoration: none;
@@ -115,7 +104,7 @@
       display: inline-block;
       margin-top: 10px;
       padding: 10px 15px;
-      background: #0d1b2a;
+      background: #0078ff;
       color: white;
       border-radius: 6px;
       text-decoration: none;
@@ -131,7 +120,7 @@
       font-size: 2rem;
     }
     .contact-icons a { color: #333; transition: color 0.3s, transform 0.3s; }
-    .contact-icons a:hover { color: #0d1b2a; transform: scale(1.2); }
+    .contact-icons a:hover { color: #0078ff; transform: scale(1.2); }
 
     /* Footer */
     footer {
@@ -142,23 +131,6 @@
       margin-top: 40px;
     }
 
-    /* Scroll to Top Button */
-    #scrollTopBtn {
-      display: none;
-      position: fixed;
-      bottom: 20px; right: 20px;
-      z-index: 999;
-      font-size: 18px;
-      background: #0d1b2a;
-      color: white;
-      border: none;
-      padding: 12px;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    #scrollTopBtn:hover { background: #ff9800; }
-
     /* Smooth Scrolling */
     html { scroll-behavior: smooth; }
   </style>
@@ -166,19 +138,14 @@
 <body>
 
   <!-- Navbar -->
-  <nav id="navbar">
-    <h1>Portfolio.</h1>
+  <nav>
+    <h1>Sachira Dilhara</h1>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
-    <div class="nav-icons">
-      <a href="mailto:sac365k@gmail.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://github.com/SDilhara737" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/sachira-dilhara-26a916129" target="_blank"><i class="fab fa-linkedin"></i></a>
-    </div>
   </nav>
 
   <!-- Hero -->
@@ -240,27 +207,5 @@
   <footer>
     <p>© 2025 Sachira Dilhara | Built with ❤️</p>
   </footer>
-
-  <!-- Scroll to Top Button -->
-  <button onclick="topFunction()" id="scrollTopBtn"><i class="fas fa-arrow-up"></i></button>
-
-  <script>
-    // Navbar color change on scroll
-    window.onscroll = function() {
-      let navbar = document.getElementById("navbar");
-      let scrollBtn = document.getElementById("scrollTopBtn");
-      if (document.documentElement.scrollTop > 50) {
-        navbar.classList.add("scrolled");
-        scrollBtn.style.display = "block";
-      } else {
-        navbar.classList.remove("scrolled");
-        scrollBtn.style.display = "none";
-      }
-    };
-    // Scroll to top
-    function topFunction() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-  </script>
 </body>
 </html>
