--- a/index.html
+++ b/index.html
@@ -130,6 +130,25 @@
       padding: 15px 0;
       margin-top: 40px;
     }
+    /* Hero Intro Box */
+    .intro-box {
+      background: rgba(255, 255, 255, 0.2);
+      padding: 20px 40px;
+      border-radius: 15px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      margin-bottom: 20px;
+    }
+    .intro-box h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    .intro-box p {
+      font-size: 1.2rem;
+      font-weight: 300;
+    }
+
+    
 
     /* Smooth Scrolling */
     html { scroll-behavior: smooth; }
@@ -149,12 +168,17 @@
   </nav>
 
   <!-- Hero -->
-  <header id="home">
+<!-- Hero -->
+<header id="home">
+  <div class="intro-box">
     <h1>Hello, I'm Sachira Dilhara</h1>
-    <p>Web Developer | Software Projects | MS Office Tools</p>
-    <a href="#projects">View My Work</a>
-    <a href="#contact">Contact Me</a>
-  </header>
+    <p>from Sri Lanka</p>
+  </div>
+  <p>Web Developer | Software Projects | MS Office Tools</p>
+  <a href="#projects">View My Work</a>
+  <a href="#contact">Contact Me</a>
+</header>
+
 
   <!-- About -->
   <section id="about">
@@ -209,3 +233,4 @@
   </footer>
 </body>
 </html>
+
