--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
       margin-bottom: 20px;
     }
+    .intro-box h3 {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+    }
     .intro-box h1 {
       font-size: 2.5rem;
       margin-bottom: 10px;
@@ -171,7 +175,8 @@
 <!-- Hero -->
 <header id="home">
   <div class="intro-box">
-    <h1>Hello, I'm Sachira Dilhara</h1>
+    <h3>Hello,</h1>
+    <h1>I'm Sachira Dilhara</h1>
     <p>from Sri Lanka</p>
   </div>
   <p>Web Developer | Software Projects | MS Office Tools</p>
@@ -233,4 +238,5 @@
   </footer>
 </body>
 </html>
+
 
