Update 6.0 back index.html

--- a/index.html
+++ b/index.html
@@ -130,29 +130,6 @@
       padding: 15px 0;
       margin-top: 40px;
     }
-    /* Hero Intro Box */
-    .intro-box {
-      background: rgba(255, 255, 255, 0.2);
-      padding: 20px 40px;
-      border-radius: 15px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      margin-bottom: 20px;
-    }
-    .intro-box h3 {
-      font-size: 1.5rem;
-      margin-bottom: 10px;
-    }
-    .intro-box h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    .intro-box p {
-      font-size: 1.2rem;
-      font-weight: 300;
-    }
-
-    
 
     /* Smooth Scrolling */
     html { scroll-behavior: smooth; }
@@ -172,18 +149,12 @@
   </nav>
 
   <!-- Hero -->
-<!-- Hero -->
-<header id="home">
-  <div class="intro-box">
-    <h3>Hello,</h1>
-    <h1>I'm Sachira Dilhara</h1>
-    <p>from Sri Lanka</p>
-  </div>
-  <p>Web Developer | Software Projects | MS Office Tools</p>
-  <a href="#projects">View My Work</a>
-  <a href="#contact">Contact Me</a>
-</header>
-
+  <header id="home">
+    <h1>Hello, I'm Sachira Dilhara</h1>
+    <p>Web Developer | Software Projects | MS Office Tools</p>
+    <a href="#projects">View My Work</a>
+    <a href="#contact">Contact Me</a>
+  </header>
 
   <!-- About -->
   <section id="about">
@@ -238,5 +209,3 @@
   </footer>
 </body>
 </html>
-
-
