--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       align-items: center;
       text-align: center;
     }
-    header h1 { font-size: 3rem; margin-bottom: 15px; }
-    header p { font-size: 1.3rem; margin-bottom: 20px; }
+    header h1 { font-size: 3rem; margin-bottom: 15px; color:#fff ; }
+    header p { font-size: 1.3rem; margin-bottom: 20px; color:#fff ; }
     header a {
       background: #fff;
       color: #0078ff;
@@ -240,3 +240,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
