--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <nav
         class="container mx-auto px-6 py-4 flex justify-between items-center"
       >
-        <a href="#" class="text-2xl font-bold text-white">Your Name</a>
+        <a href="#" class="text-2xl font-bold text-white">Sachira Dilhara</a>
         <div class="hidden md:flex space-x-6">
           <a href="#about" class="nav-link text-gray-300">About</a>
           <a href="#projects" class="nav-link text-gray-300">Projects</a>
@@ -470,3 +470,4 @@
     </script>
   </body>
 </html>
+
