New v.4 index.html

--- a/index.html
+++ b/index.html
@@ -243,14 +243,10 @@
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <!-- Project 1 -->
             <div class="project-card rounded-lg overflow-hidden">
-              <img
-                src="https://github.com/SDilhara737/python/blob/master/ebillcal.py"
-                alt="Project 1"
-                class="w-full h-48 object-cover"
-              />
+          
               <div class="p-6">
                 <h3 class="text-xl font-semibold mb-2 text-white">
-                  Electricity bill calculator
+                  <a href="https://github.com/SDilhara737/python/blob/master/ebillcal.py">Electricity bill calculator</a>
                 </h3>
                 <p class="text-gray-400 mb-4">
                   This will calculate your electricity bill. This program buit
@@ -470,4 +466,5 @@
     </script>
   </body>
 </html>
+
 
