New v.5.2 index.html

--- a/index.html
+++ b/index.html
@@ -252,10 +252,11 @@
                   This will calculate your electricity bill. This program buit
                   using python
                 </p>
-                <div class="flex gap-4">
-                  <a href="https://github.com/SDilhara737/python/blob/master/ebillcal.py" class="text-amber-400 hover:underline"
-                    >https://github.com/SDilhara737/python/blob/master/ebillcal.py</a
-                  >
+                <a href="https://github.com/SDilhara737/python/blob/master/ebillcal.py" 
+                   class="text-amber-400 hover:underline"
+                   target="_blank" rel="noopener noreferrer">
+                    Source Code
+                </a>
                  
                 </div>
               </div>
@@ -451,6 +452,7 @@
     </script>
   </body>
 </html>
+
 
 
 
