New v.5 back index.html

--- a/index.html
+++ b/index.html
@@ -252,11 +252,10 @@
                   This will calculate your electricity bill. This program buit
                   using python
                 </p>
-                <a href="https://github.com/SDilhara737/python/blob/master/ebillcal.py" 
-                   class="text-amber-400 hover:underline"
-                   target="_blank" rel="noopener noreferrer">
-                    Source Code
-                </a>
+                <div class="flex gap-4">
+                  <a href="https://github.com/SDilhara737/python/blob/master/ebillcal.py" class="text-amber-400 hover:underline"
+                    >https://github.com/SDilhara737/python/blob/master/ebillcal.py</a
+                  >
                  
                 </div>
               </div>
@@ -452,7 +451,5 @@
     </script>
   </body>
 </html>
-
-
 
 
